--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta content="/img/huskypasted.png" property="og:image" />
     <meta content="#BD00FF" data-react-helmet="true" name="theme-color" />
     <meta content="If you read this your gay" name="description">
-    <link href="img/huskypasted.png" rel="icon" type="image/ico" />
+    <link href="img/324.png" rel="icon" type="image/ico" />
     <link href="css/particles.css" media="screen" rel="stylesheet">
     <link href="css/main.css" media="screen" rel="stylesheet">
     <link href="css/creativa-popup.css" rel="stylesheet">
