--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             strings: [
                 "I'm 100% POLISH..... oh sorry are you scared ?",
                 "owner of Shade Solutions",
-                "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>16</a> years old and earn more money than your parents",
+                "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>Casino</a> enjoyer",
                 "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>c++</a> Paster",
                 "I am UD asf",
             ],
