--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </style>
 
     <script src="js/title.js"></script>
+    <script src="particles.js"></script>
     <script src="js/creativa-popup.js" type="text/javascript"></script>
     <script src="js/popup.js" type="text/javascript"></script>
 </head>
