--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="https://discord.gg/shadesolutions" target="_blank">
+                    <a href="https://www.youtube.com/@Anal1za" target="_blank">
                         <p class='button'>
                             <i class="fa-brands fa-youtube"></i> youtube
                         </p>
